--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"server.js",
+    "dev":"nodemon server.js"
   },
   "keywords": [],
   "author": "veradanicode",
