--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
@@ -9,11 +10,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"server.js",
-    "dev":"nodemon server.js"
+    "start": "server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "veradanicode",
