--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   },
   "name": "server",
